Primer botón con la muestra de una actividad con un botón flotante

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
     <string name="app_name">PruevaSvn</string>
+    <string name="btn_float_ext">Boton flotante extendido</string>
 </resources>
