--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PruevaSvn</string>
     <string name="btn_float_ext">Boton flotante extendido</string>
+    <string name="title_activity_animacion_boton_flotante">AnimacionBotonFlotanteActivity</string>
+    <string name="btn_float_animado">Boton flotante animado</string>
 </resources>
